plugins {
    id 'application'
    id 'eclipse'
}

repositories {
    mavenCentral()
}

sourceCompatibility = 1.8;
targetCompatibility = 1.8;

dependencies {
}

application {
    mainClass = 'io.github.nuclearfarts.dumper.Main'
}

jar {
	manifest {
		attributes (
			"Main-Class": application.mainClass,
			"Agent-Class": "io.github.nuclearfarts.dumper.agent.Agent",
			"Can-Redefine-Classes": "true",
			"Can-Retransform-Classes": "true"
		)
	}
}
